bobgui_deprecated_sources = [
  'deprecated/bobguiappchooser.c',
  'deprecated/bobguiappchooserbutton.c',
  'deprecated/bobguiappchooserdialog.c',
  'deprecated/bobguiappchooserwidget.c',
  'deprecated/bobguiassistant.c',
  'deprecated/bobguicellarea.c',
  'deprecated/bobguicellareabox.c',
  'deprecated/bobguicellareacontext.c',
  'deprecated/bobguicellareaboxcontext.c',
  'deprecated/bobguicelleditable.c',
  'deprecated/bobguicelllayout.c',
  'deprecated/bobguicellrenderer.c',
  'deprecated/bobguicellrendereraccel.c',
  'deprecated/bobguicellrenderercombo.c',
  'deprecated/bobguicellrendererpixbuf.c',
  'deprecated/bobguicellrendererprogress.c',
  'deprecated/bobguicellrendererspin.c',
  'deprecated/bobguicellrendererspinner.c',
  'deprecated/bobguicellrenderertext.c',
  'deprecated/bobguicellrenderertoggle.c',
  'deprecated/bobguicellview.c',
  'deprecated/bobguicolorbutton.c',
  'deprecated/bobguicolorchooser.c',
  'deprecated/bobguicombobox.c',
  'deprecated/bobguicomboboxtext.c',
  'deprecated/bobguidialog.c',
  'deprecated/bobguientrycompletion.c',
  'deprecated/bobguifilechooser.c',
  'deprecated/bobguifontbutton.c',
  'deprecated/bobguifontchooser.c',
  'deprecated/bobguiiconview.c',
  'deprecated/bobguiinfobar.c',
  'deprecated/bobguiliststore.c',
  'deprecated/bobguilockbutton.c',
  'deprecated/bobguirender.c',
  'deprecated/bobguishortcutlabel.c',
  'deprecated/bobguishortcutsgroup.c',
  'deprecated/bobguishortcutssection.c',
  'deprecated/bobguishortcutsshortcut.c',
  'deprecated/bobguishortcutswindow.c',
  'deprecated/bobguishow.c',
  'deprecated/bobguistatusbar.c',
  'deprecated/bobguistylecontext.c',
  'deprecated/bobguitreedatalist.c',
  'deprecated/bobguitreednd.c',
  'deprecated/bobguitreemodel.c',
  'deprecated/bobguitreemodelfilter.c',
  'deprecated/bobguitreemodelsort.c',
  'deprecated/bobguitreerbtree.c',
  'deprecated/bobguitreeselection.c',
  'deprecated/bobguitreesortable.c',
  'deprecated/bobguitreestore.c',
  'deprecated/bobguitreepopover.c',
  'deprecated/bobguitreeview.c',
  'deprecated/bobguitreeviewcolumn.c',
  'deprecated/bobguivolumebutton.c',
]

bobgui_deprecated_headers = [
  'deprecated/bobguiappchooser.h',
  'deprecated/bobguiappchooserbutton.h',
  'deprecated/bobguiappchooserdialog.h',
  'deprecated/bobguiappchooserwidget.h',
  'deprecated/bobguiassistant.h',
  'deprecated/bobguicellarea.h',
  'deprecated/bobguicellareabox.h',
  'deprecated/bobguicellareacontext.h',
  'deprecated/bobguicelleditable.h',
  'deprecated/bobguicelllayout.h',
  'deprecated/bobguicellrenderer.h',
  'deprecated/bobguicellrendereraccel.h',
  'deprecated/bobguicellrenderercombo.h',
  'deprecated/bobguicellrendererpixbuf.h',
  'deprecated/bobguicellrendererprogress.h',
  'deprecated/bobguicellrendererspin.h',
  'deprecated/bobguicellrendererspinner.h',
  'deprecated/bobguicellrenderertext.h',
  'deprecated/bobguicellrenderertoggle.h',
  'deprecated/bobguicellview.h',
  'deprecated/bobguicolorbutton.h',
  'deprecated/bobguicolorchooser.h',
  'deprecated/bobguicolorchooserdialog.h',
  'deprecated/bobguicolorchooserwidget.h',
  'deprecated/bobguicombobox.h',
  'deprecated/bobguicomboboxtext.h',
  'deprecated/bobguidialog.h',
  'deprecated/bobguientrycompletion.h',
  'deprecated/bobguifilechooser.h',
  'deprecated/bobguifilechooserdialog.h',
  'deprecated/bobguifilechoosernative.h',
  'deprecated/bobguifilechooserwidget.h',
  'deprecated/bobguifontbutton.h',
  'deprecated/bobguifontchooser.h',
  'deprecated/bobguifontchooserdialog.h',
  'deprecated/bobguifontchooserwidget.h',
  'deprecated/bobguiiconview.h',
  'deprecated/bobguiinfobar.h',
  'deprecated/bobguiliststore.h',
  'deprecated/bobguilockbutton.h',
  'deprecated/bobguimessagedialog.h',
  'deprecated/bobguirender.h',
  'deprecated/bobguishortcutlabel.h',
  'deprecated/bobguishortcutsgroup.h',
  'deprecated/bobguishortcutssection.h',
  'deprecated/bobguishortcutsshortcut.h',
  'deprecated/bobguishortcutswindow.h',
  'deprecated/bobguishow.h',
  'deprecated/bobguistatusbar.h',
  'deprecated/bobguistylecontext.h',
  'deprecated/bobguitreednd.h',
  'deprecated/bobguitreemodel.h',
  'deprecated/bobguitreemodelfilter.h',
  'deprecated/bobguitreemodelsort.h',
  'deprecated/bobguitreeselection.h',
  'deprecated/bobguitreesortable.h',
  'deprecated/bobguitreestore.h',
  'deprecated/bobguitreeview.h',
  'deprecated/bobguitreeviewcolumn.h',
  'deprecated/bobguivolumebutton.h',
]
